--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <link rel="stylesheet" href="owl-carousel/owl.theme.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
